# trinary

./: .gitignore  LICENSE.md  README.md  pyproject.toml  readme.md  trinary.py
.github/: tests.yml
.github/workflows/: tests.yml
tests/: test_trinary.py
