[tool.poetry]
name = "trinary"
version = "0.2.0"
description = "Trinary logic in Python"
authors = ["Travis Jungroth <jungroth@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = "^22.12.0"
ruff = "^0.0.191"
coverage = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
